[FIX] portal: fix alert misalignments
The alert content is misaligned these changes are side effects of
commit[1], the `h5` and `p` in the alert have margin that creates
whitespace in the alert.

Commit[2] addressed a misalignment issue and alignment issue due to
nested `row` but these became irrelevant with commit[1]. This is why we
remove the styling.

task-5262108

[1]: odoo/odoo@513931a5e540f22f37e317f80fd131701cbbc8f0
[2]: odoo/odoo@d64dbaadcb1bef27d89a89e9d42bdb38890c73e0

X-original-commit: 56ee9e46b18e9901b88621a3ca912c9309a5ddf4

--- a/addons/portal/static/src/scss/portal.scss
+++ b/addons/portal/static/src/scss/portal.scss
@@ -268,6 +268,21 @@ img, .media_iframe_video, .o_image {
         text-decoration: none;
     }
 
+    #portal_alert_category .alert {
+        div.mb-1.fw-normal {
+            align-items: center;
+            margin-bottom: 0 !important;
+        }
+
+        div.opacity-75:has(*) {
+            margin-top: map-get($spacers, 1);
+        }
+
+        p, h5 {
+            margin-bottom: 0 !important;
+        }
+    }
+
     .o_portal_navbar {
         .breadcrumb {
             padding-left: 0;
